fixed show only on mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1422,10 +1422,16 @@ ol.carousel-indicators li{
     }        
 }
 
+@media (min-width: 300px) and (max-width: 1024px) {
 .weloveshopping-text{
     color: white;
     font-family: 'Ubuntu', sans-serif;
     font-size:2.750rem;
     font-weight: 700;
     line-height: 4.5rem;
+}
+}
+
+.weloveshopping-text{
+    color: white;
 }
